<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="final_result">Result = %s</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="add">ADD</string>
    <string name="sub">SUB</string>
    <string name="multiply">MULTIPLY</string>
    <string name="division">DIVISION</string>
</resources>