<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:padding="20dp"
        >

        <EditText
            android:id="@+id/txtNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_1"
            android:layout_marginTop="30dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/txtNum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:hint="@string/enter_number_2"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/txtNum1"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtRes"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/txtRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtNum2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="17sp"
            tools:text="Result = 10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
